<resources>
    <string name="app_name">OurApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- in TestingFragment-->
    <string name="move_test_header">행동 TEST</string>
    <string name="move_test_desc">아이의 행동 발달 수준을 테스트 할 수 있어요</string>
    <string name="voice_test_header">언어 TEST</string>
    <string name="voice_test_desc">아이의 언어 발달 수준을 테스트 할 수 있어요</string>
    <string name="get_video_txt">영상 파일 가져오기</string>
    <string name="get_voice_txt">음성 파일 가져오기</string>
    <string name="file_path_txt">파일 경로</string>
    <string name="voice_make_txt">음성 파일 녹음하기</string>
    <string name="video_make_txt">영상 파일 촬영하기</string>

    <string name="get_file_btn">가져오기</string>
    <string name="make_file_btn">촬영하기</string>
    <string name="warn_header_txt">주의사항</string>
    <string-array name="video_warn_list">
        <item>1. 주의사항 1</item>
        <item>2. 주의사항 2</item>
        <item>3. 주의사항 3</item>
        <item>4. 주의사항 4</item>
        <item>5. 주의사항 5</item>
    </string-array>
    <string-array name="voice_warn_list">
        <item>1. 주의사항 1</item>
        <item>2. 주의사항 2</item>
        <item>3. 주의사항 3</item>
        <item>4. 주의사항 4</item>
        <item>5. 주의사항 5</item>
    </string-array>
    <string name="conduct_test_txt">TEST 시작</string>

    <string name="my_page_header">My Page</string>
    <string name="my_page_desc">아이의 행동 발달 검사 기록을 볼 수 있어요</string>
    <string name="my_page_list_desc">아이의 행동 발달 검사 기록 리스트를 볼 수 있어요</string>
    <string name="lan_txt">언어 발달</string>
    <string name="behavior_txt">행동 발달</string>
    <string name="into_record">가져오기</string>
</resources>