<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestingActivity">

    <TextView
        android:id="@+id/TestHeaderTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_test_header"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="2dp"
        android:textSize="12pt"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/TestDescTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_test_desc"
        android:layout_marginStart="25dp"
        android:textSize="7pt"
        app:layout_constraintTop_toBottomOf="@id/TestHeaderTxt"/>

    <View
        android:id="@+id/FirstHR"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/TestDescTxt"/>

    <TextView
        android:id="@+id/TestNumTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="검사 차수: N회"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="45dp"
        android:textSize="10pt"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/FirstHR"/>

    <TextView
        android:id="@+id/GetFileTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_video_txt"
        android:layout_marginTop="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="2dp"
        android:textSize="8pt"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/TestNumTxt"/>

    <LinearLayout
        android:id="@+id/FileWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/GetFileTxt">

        <EditText
            android:id="@+id/FilePathEditText"
            android:layout_width="220dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:hint="@string/file_path_txt"
            android:textSize="8pt"
            android:paddingStart="5dp"
            android:paddingBottom="0dp"
            android:paddingEnd="0dp"
            android:paddingTop="0dp"
            />

        <Button
            android:id="@+id/ConductTestBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_file_btn"
            android:layout_marginStart="20dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/WarnHeaderTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/warn_header_txt"
        android:textSize="8pt"
        android:textColor="@color/black"
        android:layout_marginStart="25dp"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@id/FileWrapper"/>

    <View
        android:id="@+id/SecondHR"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/WarnHeaderTxt"/>

    <TextView
        android:id="@+id/warnTxt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/SecondHR"/>

    <TextView
        android:id="@+id/warnTxt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/warnTxt1"/>

    <TextView
        android:id="@+id/warnTxt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/warnTxt2"/>

    <TextView
        android:id="@+id/warnTxt4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/warnTxt3"/>

    <TextView
        android:id="@+id/warnTxt5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/warnTxt4"/>

    <Button
        android:id="@+id/GetFileBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/conduct_test_txt"
        app:layout_constraintRignt_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/warnTxt5"
        tools:layout_editor_absoluteX="264dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        app:labelVisibilityMode="labeled"
        app:itemBackground="@color/white"
        app:menu="@menu/cmenu"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>