<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/myPageTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_page_header"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="2dp"
        android:textSize="12pt"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"/>


    <ImageButton
        android:id="@+id/calendarImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:padding="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/calender"
        app:layout_constraintEnd_toEndOf="@id/myPageTxt"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/myPageRecordListTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_page_desc"
        android:layout_marginStart="25dp"
        android:textSize="7pt"
        app:layout_constraintTop_toBottomOf="@id/myPageTxt"/>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/myPageRecordListTxt"/>

    <TextView
        android:id="@+id/lateTestTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="최근 검사일시 : 2022/11/11"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="45dp"
        android:textSize="8pt"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/line1"/>

    <TextView
        android:id="@+id/langDevTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lan_txt"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="2dp"
        android:textSize="8pt"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/lateTestTxt"/>

    <LinearLayout
        android:id="@+id/FileWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/langDevTxt"/>


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/graph2"
        app:layout_constraintTop_toBottomOf="@id/langDevTxt"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp" />

    <TextView
        android:id="@+id/behavDevTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:text="@string/behavior_txt"
        android:layout_marginStart="25dp"
        android:textColor="@color/black"
        android:textSize="8pt"
        app:layout_constraintTop_toBottomOf="@id/FileWrapper"
        tools:layout_editor_absoluteX="81dp" />


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/graph2"
        app:layout_constraintTop_toBottomOf="@id/behavDevTxt"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp" />

</androidx.constraintlayout.widget.ConstraintLayout>